--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.7.1",
     "dom": "0.0.3",
     "react": "^17.0.1",
+    "react-deck-swiper": "^1.0.9",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
