--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "react": "^17.0.1",
     "react-deck-swiper": "^1.0.9",
     "react-dom": "^17.0.1",
+    "react-particle-effect-button": "^1.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-swipeable": "^6.0.1",
+    "styled-components": "^5.2.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
